Base changes pointing to new environment

--- a/src/app/components/scratch-game/scratch-game.component.html
+++ b/src/app/components/scratch-game/scratch-game.component.html
@@ -8,7 +8,7 @@
         <div class="card col-md-12 m-auto">
           <div class="card-header">
             <h5 class="card-title text-center">Raspa y Gana</h5>
-            <p class="card-category text-center">Bienvenido al Raspa y gana de SmartCard!.</p>
+            <p class="card-category text-center">Bienvenido al Raspa y gana de Reisen Gruppe!.</p>
           </div>
           <ng-container *ngIf="!showGame">
             <div class="card-body">
