--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -2,11 +2,11 @@
   <div class="logo">
     <a [routerLink]="'/'" class="simple-text logo-mini">
       <div class="logo-image-small">
-        <img src="../../../assets/img/smartCard-logo.png">
+        <img src="../../../assets/img/ReisenGruppe-logo.png">
       </div>
     </a>
     <a [routerLink]="'/'" class="simple-text logo-normal">
-      Smart Card
+      Reisen Gruppe
     </a>
   </div>
   <ul class="nav">
