--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
           <h5 class="card-title">Hola, {{loggedUser.name}}.</h5>
         </div>
         <div class="card-body">
-          <p>Bienvenido a SmartCard</p>
+          <p>Bienvenido a Reisen Gruppe</p>
         </div>
       </div>
     </div>
