--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container-fluid">
     <div class="copyright pull-right">
-     Powered by IA – &copy; SmartCard {{currentDate | date: 'yyyy'}} - {{appVersion}}
+     Powered by IA – &copy; Reisen Gruppe {{currentDate | date: 'yyyy'}} - {{appVersion}}
     </div>
   </div>
 </footer>
