--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid pl-0 pr-0">
       <header class="header">
         <div class="logo">
-          <img src="../../../assets/img/ReisenGruppe-logo.png" alt="Smart Card">
+          <img src="../../../assets/img/ReisenGruppe-logo.png" alt="Reisen Gruppe">
         </div>
       </header>
       <section class="welcome-section">
